--- a/css/style.css
+++ b/css/style.css
@@ -908,7 +908,7 @@ p.article-more-link a:hover {
   margin: 0 auto;
 }
 #comments {
-  background: #fff;
+  background: #dad4b9;
   padding: 30px;
   border: 1px solid #c1b57c;
   -webkit-border-radius: 3px;
