--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ body,
   cursor: default;
 }
 body {
-  font: 16px "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font: 16px "Open Sans", "Helvetica Neue", Tahoma, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", sans-serif;
   -webkit-text-size-adjust: 100%;
 }
 .outer {
@@ -442,7 +442,7 @@ body {
   background: none;
   color: #333;
   width: 100%;
-  font: 13px "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font: 13px "Open Sans", "Helvetica Neue", Tahoma, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", sans-serif;
   outline: none;
 }
 .search-form-input::-webkit-search-results-decoration,
@@ -498,7 +498,7 @@ body {
   padding: 30px 30px 0;
 }
 .article-title {
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Tahoma, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", sans-serif;
   text-decoration: none;
   font-size: 1.8em;
   font-weight: regular;
@@ -587,7 +587,7 @@ a.article-title:hover {
   padding: 10px 0;
 }
 .article-entry blockquote {
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Tahoma, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", sans-serif;
   font-size: 1em;
   border: 1px solid #c1b57c;
   border-left: 4px solid #c1b57c;
@@ -596,7 +596,7 @@ a.article-title:hover {
 .article-entry blockquote footer {
   font-size: 16px;
   margin: 1.6em 0;
-  font-family: "Georgia", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Georgia", SimSun, "宋体", serif;
 }
 .article-entry blockquote footer cite:before {
   content: "—";
@@ -805,7 +805,7 @@ p.article-more-link a:hover {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  font: 14px "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font: 14px "Open Sans", "Helvetica Neue", Tahoma, STXihei, "华文细黑", Heiti, "黑体", "Microsoft YaHei", "微软雅黑", sans-serif;
   margin: 5px;
   padding: 0 10px;
   color: #333;
@@ -906,6 +906,32 @@ p.article-more-link a:hover {
   display: block;
   max-width: 100%;
   margin: 0 auto;
+}
+.contact-icon {
+  float: left;
+  color: #888;
+  opacity: 0.6;
+  text-decoration: none;
+  -webkit-transition: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+  display: block;
+  padding: 20px 15px;
+  font-family: FontAwesome;
+  text-align: center;
+  font-size: 32px;
+  width: 32px;
+  height: 32px;
+  padding: 20px 15px;
+  position: relative;
+  cursor: pointer;
+}
+.contact-icon:hover {
+  opacity: 1;
+}
+#weibo:before {
+  content: "\f18a";
 }
 #comments {
   background: #dad4b9;
